<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBG"
    tools:context=".layoutClasses.LayoutCategories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnShowAddCategory"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/add" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollViewCategoriesPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="10dp">

                            <TextView
                                android:id="@+id/textViewCategoryTitle"
                                android:layout_width="250dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:tag="asc"
                                android:text="@string/category"
                                android:textAlignment="textStart"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="75dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/delete"
                                android:textAlignment="textStart"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <ScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="500dp"
                            android:layout_marginTop="10dp">

                            <LinearLayout
                                android:id="@+id/listCategories"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            </LinearLayout>
                        </ScrollView>

                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:id="@+id/listPaginationCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>